<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".activities.Loser">

    <TextView
        android:id="@+id/tvMessageLoser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barrio"
        android:gravity="center"
        android:textColor="?attr/colorError"
        android:textSize="40sp"
        android:text="@string/messageLoser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:id="@+id/tvAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barrio"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        tools:text="@string/answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEnd"
        android:layout_width="112dp"
        android:layout_height="89dp"
        android:backgroundTint="?attr/colorError"
        android:textColor="@color/white"
        android:fontFamily="@font/barrio"
        android:text="@string/end"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newGame"
        android:backgroundTint="?attr/colorError"
        android:textColor="@color/white"
        android:fontFamily="@font/barrio"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>