<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main"
    tools:context=".activities.MainActivity">


            <TextView
                android:id="@+id/tvInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barrio"
                android:paddingLeft="35sp"
                android:paddingRight="35sp"
                android:text="@string/instructions"
                android:textAlignment="center"
                android:textColor="?attr/colorError"
                android:textSize="30sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivError"
                android:layout_width="251dp"
                android:layout_height="269dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline" />


            <TextView
                android:id="@+id/tvHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barrio"
                android:text="@string/hint"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                app:layout_constraintVertical_bias="0.07" />

            <TextView
                android:id="@+id/tvAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barrio"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                app:layout_constraintVertical_bias="0.27"
                tools:text="@string/answer" />

            <EditText
                android:id="@+id/etGuess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="@string/digits"

                android:ems="8"
                android:fontFamily="@font/barrio"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/guess"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="1"



                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/etGuess"
                android:textColorLink="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                app:layout_constraintVertical_bias="0.6" />

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_state_colors"
                android:fontFamily="@font/barrio"
                android:text="@string/verify"
                android:textColor="@color/button_text_state_colors"
                android:textSize="25sp"
                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.801"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                app:layout_constraintVertical_bias="0.86" />

            <Button
                android:id="@+id/btnEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorError"
                android:fontFamily="@font/barrio"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/end"


                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                app:layout_constraintVertical_bias="0.86" />

    <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.60" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>